WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297127
[JSC] Unwrap JSTag exception when it is thrown
https://bugs.webkit.org/show_bug.cgi?id=297127
Summary
[JSC] Unwrap JSTag exception when it is thrown
Yusuke Suzuki
Reported
2025-08-08 11:40:33 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-08 11:40:46 PDT
<
rdar://problem/157867135
>
Yusuke Suzuki
Comment 2
2025-08-08 11:45:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49130
Yusuke Suzuki
Comment 3
2025-08-08 13:26:21 PDT
***
Bug 297134
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2025-08-08 14:30:44 PDT
Committed
298416@main
(dfc499351972): <
https://commits.webkit.org/298416@main
> Reviewed commits have been landed. Closing PR #49130 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug