[JSC] Unwrap JSTag exception when it is thrown https://bugs.webkit.org/show_bug.cgi?id=297127 rdar://157867135

Reviewed by Keith Miller.

It is possible that wasm module can use JSTag and emit wasm throw
instruction. In this case, JSTag wasm exception can be thrown even
outside of JS.
When throwing a JSTag wasm exception, we should just unwrap it
regardless. And then re-wrap it again when we need to pass it to wasm
exception handler with JSTag. Otherwise, we should not expose JSTag wasm
exception. The spec requires that it is unwraped whenever it is crossing
JS <-> wasm boundary[1].

[1]: https://webassembly.github.io/exception-handling/js-api/#call-an-exported-function

* Source/JavaScriptCore/interpreter/Interpreter.cpp:
(JSC::UnwindFunctor::UnwindFunctor):
* Source/JavaScriptCore/runtime/Exception.cpp:
(JSC::Exception::tryUnwrapValueForJSTag):
* Source/JavaScriptCore/runtime/Exception.h:
* Source/JavaScriptCore/wasm/WasmIPIntSlowPaths.cpp:
(JSC::IPInt::WASM_IPINT_EXTERN_CPP_DECL):
* Source/JavaScriptCore/wasm/WasmOperations.cpp:
(JSC::Wasm::JSC_DEFINE_NOEXCEPT_JIT_OPERATION):
* Source/JavaScriptCore/wasm/WasmSlowPaths.cpp:
(JSC::LLInt::WASM_SLOW_PATH_DECL):

Canonical link: https://commits.webkit.org/298416@main